# metagraph-dot

./: LICENSE  README.md  metagraph-dot.cabal  stack.yaml
app/: Main.hs
src/Data/Metagraph/: Diagrams.hs  Dot.hs
