name:                metagraph-dot
version:             0.1.0.0
synopsis:            Generation DOT file for metagraphs
-- description:
homepage:            https://github.com/teaspot-studio/metagraph-dot#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Metagraph.Dot
  default-language:    Haskell2010
  build-depends:
      base       >= 4.7       && < 5
    , metagraph  >= 0.1       && < 0.2
    , text       >= 1.2       && < 1.3
    , containers >= 0.5       && < 0.6
    , graphviz   >= 2999.18   && < 2999.19

  default-extensions:
    ScopedTypeVariables
    RecordWildCards
    DataKinds
    OverloadedStrings

executable metagraph-dot
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base          >= 4.7      && < 5
    , graphviz      >= 2999.18  && < 2999.19
    , metagraph     >= 0.1      && < 0.2
    , metagraph-dot
    , text          >= 1.2      && < 1.3
    , turtle        >= 1.3      && < 1.4
